@@ -1,0 +1,29 @@
+/* -*- Mode: C; indent-tabs-mode: t; c-basic-offset: 4; tab-width: 4 -*- */
+/*
+    an_symbol_prefs.h
+    Copyright (C) 2004 Naba Kumar
+
+    This program is free software; you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation; either version 2 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program; if not, write to the Free Software
+    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+*/
+
+#ifndef __AN_SYMBOL_PREFS_H__
+#define __AN_SYMBOL_PREFS_H__
+
+#include "plugin.h"
+
+void symbol_browser_prefs_init (SymbolBrowserPlugin *plugin);
+void symbol_browser_prefs_finalize (SymbolBrowserPlugin *plugin);
+
+#endif
